# moo-agent

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/explanation/: agent-internals.md  zil-importer.md
docs/source/how-to/: moo-agent.md
docs/source/reference/: zil-importer.md
docs/source/tutorials/: first-agent.md
docs/specs/: agent-framework-tooling.md  pydantic-ai-stage-2.md  todo-list-feature.md
extras/agents/: README.md  agent-verb-proposals.md  baseline-rooms.md  baseline-verbs.md  baseline.md  room-description-principles.md
extras/agents/archivist/: README.md  SOUL.md  settings.toml
extras/agents/builder/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/cartographer/: SOUL.md  SOUL.patch.md  settings.toml
extras/agents/cliff/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/foreman/: README.md  SOUL.md  SOUL.patch.md  dispatch.json  settings.toml
extras/agents/gamer/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/gossip/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/groups/: gamer.conf  inspectors.conf  mailmen.conf  makers.conf  neighbours.conf  stockrun.conf  tradesmen.conf  wanderer.conf
extras/agents/harbinger/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/joiner/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/mason/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/newman/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/prude/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/quartermaster/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/stocker/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/tailor/: SOUL.md  SOUL.patch.md  settings.toml
extras/agents/tinker/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/agents/warden/: README.md  SOUL.md  SOUL.patch.md  settings.toml
extras/skills/: MULTI-GAME-PORTING-PLAN.md  README.md
extras/skills/_shared/: moo_session.py
extras/skills/agent-trainer/: SKILL.md
extras/skills/beyondzork-shakedown/: BEYONDZORK-FEASIBILITY.md  BUGS.md  FEATURES.md  SKILL.md  TODO.md
extras/skills/game-designer/: README.md  SKILL.md
extras/skills/hhg-shakedown/: BUGS.md  FEATURES.md  HHG-FEASIBILITY.md  SKILL.md  TODO.md
extras/skills/sandbox-auditor/: README.md  SKILL.md
extras/skills/tech-librarian/: README.md  SKILL.md
extras/skills/verb-author/: README.md  SKILL.md
extras/skills/zork-shakedown/: BUGS.md  FEATURES.md  SKILL.md  TODO.md
extras/skills/zork2-shakedown/: BUGS.md  FEATURES.md  SKILL.md  TODO.md
extras/skills/zork3-shakedown/: BUGS.md  FEATURES.md  SKILL.md  TODO.md
extras/skills/zorkzero-shakedown/: BUGS.md  FEATURES.md  SKILL.md  TODO.md  ZORKZERO-FEASIBILITY.md
extras/zil_import/: AGENTS.md  __init__.py  cli.py  converter.py  game_config.py  ir.py  lint.py  verb_metadata.py
extras/zil_import/generator/: __init__.py  config.py
extras/zil_import/scripts/: _hhg_reset_state_body.py  _reset_state_body.py  zork1_reset.py  zork1_save_state.py  zork1_smoke.py  zork1_spot.py
extras/zil_import/templates/: 010_classes.py.j2  (+4 more)
moo/agent/: README.md  agent_tools.py  brain.py  cli.py  config.py  connection.py  iac.py  llm_client.py  lore.py  observability.py  response_model.py  session_log.py  soul.py  tools.py  tui.py
moo/zil_import/: AGENTS.md  audit.py  cli.py  converter.py  game_config.py  ir.py  lint.py  migration.py  parser.py  snapshot.py  verb_metadata.py
(+1590 files in other folders)
